--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,8 @@
 {
     "name": "Ruby on Rails N+1 Example",
     "dockerComposeFile": "../docker-compose.yml",
+    "service": "app",
+    "workspaceFolder": "/app",
     "customizations": {
         "vscode": {
             "extensions": [
@@ -12,5 +14,7 @@
     },
     "postCreateCommand": "bundle install && bundle exec rails db:create db:migrate",
     "remoteUser": "root",
-    "workspaceFolder": "/workspaces/ruby-on-rails-n-plus-1-example"
+    "forwardPorts": [
+        3000
+    ]
 }
