--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,8 @@
 {
     "name": "Ruby on Rails N+1 Example",
     "dockerComposeFile": "../docker-compose.yml",
-    "service": "db",
-    "workspaceFolder": "/workspaces/ruby-on-rails-n-plus-1-example",
+    "service": "app",
+    "workspaceFolder": "/app",
     "customizations": {
         "vscode": {
             "extensions": [
@@ -13,5 +13,8 @@
         }
     },
     "postCreateCommand": "bundle install && bundle exec rails db:create db:migrate",
-    "remoteUser": "root"
+    "remoteUser": "root",
+    "forwardPorts": [
+        3000
+    ]
 }
