--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
             ]
         }
     },
-    "postCreateCommand": "bundle install && bundle exec rails db:create db:migrate",
+    "postCreateCommand": "bundle install && bundle exec rails db:create db:migrate && RAILS_ENV=test bundle exec rails db:create db:migrate",
     "remoteUser": "root",
     "forwardPorts": [
         3000
