--- a/config/database.yml
+++ b/config/database.yml
@@ -60,7 +60,7 @@ development:
 test:
   <<: *default
   database: n_plus_one_example_test
-  host: db
+  host: test_db
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
