--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - test_db
     environment:
       DATABASE_URL: postgres://postgres:postgres@db:5432/n_plus_one_example_development
-      RAILS_ENV: development
+      TEST_DATABASE_URL: postgres://postgres:postgres@test_db:5432/n_plus_one_example_test
     tty: true
     stdin_open: true
 
@@ -27,5 +28,15 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  test_db:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: n_plus_one_example_test
+    volumes:
+      - postgres_test_data:/var/lib/postgresql/data
+
 volumes:
   postgres_data:
+  postgres_test_data:
